tests/snapshots/compile_core__unbound_with_tup_pattern.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core/unbound_with_tup_pattern.hvm
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mFoo[0m[1m':[0m
  Unbound variable 'a'.
