tests/snapshots/compile_core__underscore.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core/underscore.hvm
---
@const = (* 2)

@main = a
  & @const ~ (0 a)
