tests/snapshots/compile_core__unexpected_top_char.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core/unexpected_top_char.hvm
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/compile_core/unexpected_top_char.hvm :
[1m- expected:[0m top-level definition
[1m- detected:[0m
[0m 1 | [4m[31m*[0m
