tests/snapshots/compile_core__unscoped_dup_use.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core/unscoped_dup_use.hvm
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mmain[0m[1m':[0m
  Unscoped variable '$a' used more than once.
