tests/snapshots/compile_core__unused_let.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core/unused_let.hvm
---
@main = ({$(:[+] $(a *)) {a b}} b)
