tests/snapshots/compile_core__unused_unscoped_bind.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core/unused_unscoped_bind.hvm
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mmain[0m[1m':[0m
  Unscoped variable from lambda 'λ$a' is never used.
