tests/snapshots/compile_core__vicious_circles.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core/vicious_circles.hvm
---
[4m[1m[31mErrors:[0m
[1mIn compiled inet '[4mdisconnected_self_lam[0m[1m':[0m
  Found term that compiles into an inet with a vicious cycle
[1mIn compiled inet '[4mdup_self[0m[1m':[0m
  Found term that compiles into an inet with a vicious cycle
