tests/snapshots/compile_core__warn_and_err.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core/warn_and_err.hvm
---
[4m[1m[33mWarnings:[0m
[1mIn definition '[4mFoo[0m[1m':[0m
  Repeated bind in pattern matching rule: 'a'.

[4m[1m[31mErrors:[0m
[1mIn definition '[4mMain[0m[1m':[0m
  Unbound variable 'a'.
