tests/snapshots/compile_core__with_clause_parse_err.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core/with_clause_parse_err.hvm
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/compile_core/with_clause_parse_err.hvm :
[1m- expected:[0m '{'
[1m- detected:[0m
[0m  1 | main = @a @b switch b [4m[31mw[0mitha{[0m
